'Version 1.5.8 of the AWS Java SDK'
This release updates the Auto Scaling client with support for launching instances in Amazon Virtual Private Cloud (Amazon VPC) with a public IP address.